--- a/Deals/Custom Cells/DealsListingTableViewCell.xib
+++ b/Deals/Custom Cells/DealsListingTableViewCell.xib
@@ -22,6 +22,9 @@
         <array key="SF-Pro-Text-Semibold.otf">
             <string>SFProText-Semibold</string>
         </array>
+        <array key="SFCompactText-Regular.otf">
+            <string>SFCompactText-Regular</string>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -99,21 +102,21 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="address" translatesAutoresizingMaskIntoConstraints="NO" id="ORX-EJ-zeq">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="address" translatesAutoresizingMaskIntoConstraints="NO" id="ORX-EJ-zeq">
                                 <rect key="frame" x="124" y="33" width="12" height="13"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="12" id="nzR-YZ-RRO"/>
                                     <constraint firstAttribute="height" constant="13" id="qte-JO-j2o"/>
                                 </constraints>
                             </imageView>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 kms away" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MhL-dx-O9v">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 kms away" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MhL-dx-O9v">
                                 <rect key="frame" x="137" y="32.5" width="138" height="14"/>
                                 <fontDescription key="fontDescription" name="SFProText-Regular" family="SF Pro Text" pointSize="12"/>
                                 <color key="textColor" red="0.63921568627450975" green="0.63921568627450975" blue="0.63921568627450975" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rK6-JI-zPS">
-                                <rect key="frame" x="124" y="42" width="33" height="16"/>
+                                <rect key="frame" x="124" y="56.5" width="33" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -139,15 +142,27 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sAp-1j-atb">
+                                <rect key="frame" x="141" y="30.5" width="103" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="18" id="Vi8-I9-5At"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="SFCompactText-Regular" family="SF Compact Text" pointSize="14"/>
+                                <state key="normal" title="Enable Location"/>
+                                <connections>
+                                    <action selector="enableLocationButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="SEa-Mr-bqe"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ykD-dd-HG6" firstAttribute="bottom" secondItem="Cmr-wB-3jk" secondAttribute="bottom" id="1q8-mb-hgu"/>
-                            <constraint firstItem="rK6-JI-zPS" firstAttribute="top" secondItem="FHZ-1D-n7d" secondAttribute="bottom" constant="15" id="30q-1b-Nen"/>
                             <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="MhL-dx-O9v" secondAttribute="trailing" constant="5" id="4pL-OY-D06"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="rK6-JI-zPS" secondAttribute="trailing" constant="5" id="5mb-gJ-V7K"/>
                             <constraint firstItem="xbP-0d-6TT" firstAttribute="leading" secondItem="ykD-dd-HG6" secondAttribute="trailing" constant="17" id="6gB-eg-8an"/>
+                            <constraint firstItem="sAp-1j-atb" firstAttribute="centerY" secondItem="ORX-EJ-zeq" secondAttribute="centerY" id="7SH-RW-pyk"/>
                             <constraint firstItem="FHZ-1D-n7d" firstAttribute="leading" secondItem="Cmr-wB-3jk" secondAttribute="trailing" constant="12" id="8Kd-H8-uRe"/>
+                            <constraint firstItem="rK6-JI-zPS" firstAttribute="top" secondItem="MhL-dx-O9v" secondAttribute="bottom" constant="10" id="BET-1z-5Fk"/>
                             <constraint firstItem="ykD-dd-HG6" firstAttribute="leading" secondItem="rK6-JI-zPS" secondAttribute="leading" id="C0x-Fw-oNM"/>
                             <constraint firstAttribute="trailing" secondItem="FHZ-1D-n7d" secondAttribute="trailing" constant="5" id="CZO-Em-FhD"/>
                             <constraint firstAttribute="height" constant="124" id="E4L-Qb-PbU"/>
@@ -160,6 +175,7 @@
                             <constraint firstItem="xbP-0d-6TT" firstAttribute="bottom" secondItem="ykD-dd-HG6" secondAttribute="bottom" id="qbl-La-GVb"/>
                             <constraint firstItem="ORX-EJ-zeq" firstAttribute="top" secondItem="FHZ-1D-n7d" secondAttribute="bottom" constant="6" id="sUI-W1-2O3"/>
                             <constraint firstItem="MhL-dx-O9v" firstAttribute="leading" secondItem="ORX-EJ-zeq" secondAttribute="trailing" constant="1" id="tkD-6z-eWS"/>
+                            <constraint firstItem="sAp-1j-atb" firstAttribute="leading" secondItem="ORX-EJ-zeq" secondAttribute="trailing" constant="5" id="vmU-An-cJ1"/>
                             <constraint firstItem="MhL-dx-O9v" firstAttribute="centerY" secondItem="ORX-EJ-zeq" secondAttribute="centerY" id="wn0-On-U7R"/>
                         </constraints>
                     </view>
@@ -177,6 +193,7 @@
                 <outlet property="dealImageContentView" destination="Cmr-wB-3jk" id="ul5-KZ-6Mg"/>
                 <outlet property="dealImageView" destination="7jJ-gf-2AX" id="rCb-TI-cez"/>
                 <outlet property="distanceToVendorValueLabel" destination="MhL-dx-O9v" id="ozj-Pf-v5C"/>
+                <outlet property="enableLocationButton" destination="sAp-1j-atb" id="sDz-gx-7zx"/>
                 <outlet property="favouriteButton" destination="2bw-gI-OQL" id="kSs-0r-r3g"/>
                 <outlet property="offerDescriptionValueLabel" destination="rK6-JI-zPS" id="907-pn-DaF"/>
                 <outlet property="offerPercentValueLabel" destination="Acn-P2-W7V" id="8TQ-ee-opT"/>
@@ -185,7 +202,7 @@
                 <outlet property="originalPriceValueLabel" destination="ykD-dd-HG6" id="3mt-Fo-vtv"/>
                 <outlet property="vendorNameValueLabel" destination="FHZ-1D-n7d" id="pZI-hO-igN"/>
             </connections>
-            <point key="canvasLocation" x="25" y="82"/>
+            <point key="canvasLocation" x="24" y="81.859070464767626"/>
         </tableViewCell>
     </objects>
     <resources>
