--- a/Deals/Custom Cells/HotDealCollectionViewCell.xib
+++ b/Deals/Custom Cells/HotDealCollectionViewCell.xib
@@ -19,26 +19,29 @@
         <array key="SF-Pro-Text-Semibold.otf">
             <string>SFProText-Semibold</string>
         </array>
+        <array key="SFCompactText-Regular.otf">
+            <string>SFCompactText-Regular</string>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HotDealCollectionViewCell" customModule="Dollor_Deals" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="295" height="240"/>
+            <rect key="frame" x="0.0" y="0.0" width="295" height="289"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="295" height="240"/>
+                <rect key="frame" x="0.0" y="0.0" width="295" height="289"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XW-o8-Tvw">
-                        <rect key="frame" x="0.0" y="0.0" width="295" height="240"/>
+                        <rect key="frame" x="0.0" y="0.0" width="295" height="289"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oup-Uy-2nq">
-                                <rect key="frame" x="5" y="5" width="285" height="230"/>
+                                <rect key="frame" x="5" y="5" width="285" height="279"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jBb-yP-pQN">
-                                <rect key="frame" x="5" y="5" width="285" height="230"/>
+                                <rect key="frame" x="5" y="5" width="285" height="274"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="acf-MZ-P6I">
                                         <rect key="frame" x="0.0" y="0.0" width="285" height="138"/>
@@ -56,9 +59,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0 km away" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rdE-wr-OKM">
-                                        <rect key="frame" x="27" y="168.5" width="61.5" height="14"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 km away" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rdE-wr-OKM">
+                                        <rect key="frame" x="29" y="172" width="61.5" height="14"/>
                                         <fontDescription key="fontDescription" name="SFProText-Medium" family="SF Pro Text" pointSize="12"/>
                                         <color key="textColor" red="0.63921568627450975" green="0.63921568627450975" blue="0.63921568627450975" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -66,6 +68,17 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                         </userDefinedRuntimeAttributes>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Qv-Vz-sCC">
+                                        <rect key="frame" x="29" y="170" width="103" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="18" id="Nyb-Nc-6Tb"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="SFCompactText-Regular" family="SF Compact Text" pointSize="14"/>
+                                        <state key="normal" title="Enable Location"/>
+                                        <connections>
+                                            <action selector="enableLocationButtonClicked:" destination="gTV-IL-0wX" eventType="touchUpInside" id="djd-Oi-uz0"/>
+                                        </connections>
+                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MGC-ne-C0J">
                                         <rect key="frame" x="181.5" y="148.5" width="42" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -75,16 +88,15 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                         </userDefinedRuntimeAttributes>
                                     </label>
-                                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="address" translatesAutoresizingMaskIntoConstraints="NO" id="BIS-Kh-GcS">
-                                        <rect key="frame" x="12" y="169" width="11" height="13"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="address" translatesAutoresizingMaskIntoConstraints="NO" id="BIS-Kh-GcS">
+                                        <rect key="frame" x="12" y="171" width="13" height="16"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Igm-mk-Ry6">
-                                        <rect key="frame" x="12" y="182" width="261" height="20.5"/>
+                                        <rect key="frame" x="12" y="196" width="261" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -139,9 +151,16 @@
                                     <constraint firstAttribute="trailing" secondItem="acf-MZ-P6I" secondAttribute="trailing" id="UMA-yl-pd1"/>
                                     <constraint firstItem="Igm-mk-Ry6" firstAttribute="leading" secondItem="jBb-yP-pQN" secondAttribute="leading" constant="12" id="W5h-51-SoF"/>
                                     <constraint firstItem="MGC-ne-C0J" firstAttribute="leading" secondItem="vpY-ZS-hDI" secondAttribute="trailing" constant="15" id="a57-P4-OcS"/>
-                                    <constraint firstItem="Igm-mk-Ry6" firstAttribute="top" secondItem="vpY-ZS-hDI" secondAttribute="bottom" constant="15" id="lnY-vQ-TLD"/>
+                                    <constraint firstItem="0Qv-Vz-sCC" firstAttribute="leading" secondItem="BIS-Kh-GcS" secondAttribute="trailing" constant="4" id="cR5-lh-2tG"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Igm-mk-Ry6" secondAttribute="bottom" constant="5" id="fYm-bh-6xi"/>
+                                    <constraint firstItem="BIS-Kh-GcS" firstAttribute="leading" secondItem="jBb-yP-pQN" secondAttribute="leading" constant="12" id="fq1-PP-6eu"/>
+                                    <constraint firstItem="rdE-wr-OKM" firstAttribute="leading" secondItem="BIS-Kh-GcS" secondAttribute="trailing" constant="4" id="jiI-Q4-wB0"/>
+                                    <constraint firstItem="Igm-mk-Ry6" firstAttribute="top" secondItem="rdE-wr-OKM" secondAttribute="bottom" constant="10" id="lgo-KO-PLJ"/>
+                                    <constraint firstItem="rdE-wr-OKM" firstAttribute="top" secondItem="vpY-ZS-hDI" secondAttribute="bottom" constant="5" id="mrp-61-KlO"/>
                                     <constraint firstItem="F4x-1e-iaR" firstAttribute="top" secondItem="jBb-yP-pQN" secondAttribute="top" constant="13" id="myw-tG-BNU"/>
+                                    <constraint firstItem="rdE-wr-OKM" firstAttribute="centerY" secondItem="BIS-Kh-GcS" secondAttribute="centerY" id="nVH-XO-gDY"/>
                                     <constraint firstItem="MGC-ne-C0J" firstAttribute="centerY" secondItem="vpY-ZS-hDI" secondAttribute="centerY" id="pbU-wa-5YY"/>
+                                    <constraint firstItem="0Qv-Vz-sCC" firstAttribute="centerY" secondItem="BIS-Kh-GcS" secondAttribute="centerY" id="rtm-aW-stF"/>
                                     <constraint firstItem="acf-MZ-P6I" firstAttribute="top" secondItem="jBb-yP-pQN" secondAttribute="top" id="toi-dE-Al1"/>
                                     <constraint firstItem="F4x-1e-iaR" firstAttribute="leading" secondItem="jBb-yP-pQN" secondAttribute="leading" constant="-25" id="uAN-XA-lWj"/>
                                     <constraint firstAttribute="trailing" secondItem="iG8-pk-K4N" secondAttribute="trailing" constant="12" id="yOZ-Ey-vhn"/>
@@ -155,8 +174,8 @@
                             <constraint firstItem="Oup-Uy-2nq" firstAttribute="leading" secondItem="jBb-yP-pQN" secondAttribute="leading" id="AgS-Za-X6b"/>
                             <constraint firstItem="Oup-Uy-2nq" firstAttribute="top" secondItem="jBb-yP-pQN" secondAttribute="top" id="FWj-1V-BQF"/>
                             <constraint firstAttribute="trailing" secondItem="jBb-yP-pQN" secondAttribute="trailing" constant="5" id="aGG-pe-GeZ"/>
-                            <constraint firstItem="Oup-Uy-2nq" firstAttribute="bottom" secondItem="jBb-yP-pQN" secondAttribute="bottom" id="fHF-or-c0f"/>
-                            <constraint firstAttribute="bottom" secondItem="jBb-yP-pQN" secondAttribute="bottom" constant="5" id="fdZ-Up-bw4"/>
+                            <constraint firstItem="Oup-Uy-2nq" firstAttribute="bottom" secondItem="jBb-yP-pQN" secondAttribute="bottom" constant="5" id="fHF-or-c0f"/>
+                            <constraint firstAttribute="bottom" secondItem="jBb-yP-pQN" secondAttribute="bottom" constant="10" id="gMs-wE-s1Z"/>
                             <constraint firstItem="jBb-yP-pQN" firstAttribute="top" secondItem="8XW-o8-Tvw" secondAttribute="top" constant="5" id="iAX-6Z-Riu"/>
                             <constraint firstItem="jBb-yP-pQN" firstAttribute="leading" secondItem="8XW-o8-Tvw" secondAttribute="leading" constant="5" id="ihd-44-Tkx"/>
                         </constraints>
@@ -170,12 +189,13 @@
                 <constraint firstItem="8XW-o8-Tvw" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="yUo-pP-Ohj"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="253" height="148"/>
+            <size key="customSize" width="253" height="187"/>
             <connections>
                 <outlet property="contentBackgroundView" destination="jBb-yP-pQN" id="FqN-km-uzn"/>
                 <outlet property="dealImageView" destination="acf-MZ-P6I" id="RjN-6G-mlJ"/>
                 <outlet property="descriptionLabel" destination="Igm-mk-Ry6" id="VoZ-CO-Out"/>
                 <outlet property="distanceValueLabel" destination="rdE-wr-OKM" id="CzX-QV-lkd"/>
+                <outlet property="enableLocationButton" destination="0Qv-Vz-sCC" id="cVa-tR-hna"/>
                 <outlet property="favouriteButton" destination="8Yj-vQ-4SP" id="UGe-h0-V2Z"/>
                 <outlet property="offerPriceLabel" destination="iG8-pk-K4N" id="xEw-bd-MeQ"/>
                 <outlet property="offerTagValueLabel" destination="sMy-OQ-udv" id="Sw6-dh-ErS"/>
@@ -184,7 +204,7 @@
                 <outlet property="shadowLayerView" destination="Oup-Uy-2nq" id="53v-dB-mfo"/>
                 <outlet property="vendorNameLabel" destination="vpY-ZS-hDI" id="UyD-8O-M15"/>
             </connections>
-            <point key="canvasLocation" x="86.5" y="68"/>
+            <point key="canvasLocation" x="93.599999999999994" y="118.29085457271366"/>
         </collectionViewCell>
     </objects>
     <resources>
